docs/src/content/docs/1.2.0/api/README.md
---
editUrl: false
next: false
prev: false
title: bookmark-cli-extention
slug: 1.2.0/api/readme
---

## Modules

* [application/bookmarks/bookmark-organization-use-case-helpers](/1.2.0/api/application/bookmarks/bookmark-organization-use-case-helpers/readme/)
* [application/bookmarks/bookmark-organization-use-case-types](/1.2.0/api/application/bookmarks/bookmark-organization-use-case-types/readme/)
* [application/bookmarks/bookmark-usage-use-case](/1.2.0/api/application/bookmarks/bookmark-usage-use-case/readme/)
* [application/bookmarks/bookmark-use-cases](/1.2.0/api/application/bookmarks/bookmark-use-cases/readme/)
* [application/bookmarks/browser-history-use-case](/1.2.0/api/application/bookmarks/browser-history-use-case/readme/)
* [application/bookmarks/directory-use-cases](/1.2.0/api/application/bookmarks/directory-use-cases/readme/)
* [application/bookmarks/go-bookmark-result-number](/1.2.0/api/application/bookmarks/go-bookmark-result-number/readme/)
* [application/bookmarks/make-directory-use-case](/1.2.0/api/application/bookmarks/make-directory-use-case/readme/)
* [application/bookmarks/mark-bookmark-use-case](/1.2.0/api/application/bookmarks/mark-bookmark-use-case/readme/)
* [application/bookmarks/move-bookmark-use-case](/1.2.0/api/application/bookmarks/move-bookmark-use-case/readme/)
* [application/bookmarks/organize-bookmark-use-case](/1.2.0/api/application/bookmarks/organize-bookmark-use-case/readme/)
* [application/bookmarks/organize-bookmark-use-case-test-helper](/1.2.0/api/application/bookmarks/organize-bookmark-use-case-test-helper/readme/)
* [application/bookmarks/remove-bookmark-use-case](/1.2.0/api/application/bookmarks/remove-bookmark-use-case/readme/)
* [application/bookmarks/rename-bookmark-use-case](/1.2.0/api/application/bookmarks/rename-bookmark-use-case/readme/)
* [application/bookmarks/tag-bookmark-use-case](/1.2.0/api/application/bookmarks/tag-bookmark-use-case/readme/)
* [application/bookmarks/tree-directory-use-case](/1.2.0/api/application/bookmarks/tree-directory-use-case/readme/)
* [application/commands/bookmark-alias-command-parser](/1.2.0/api/application/commands/bookmark-alias-command-parser/readme/)
* [application/commands/bookmark-command-factory](/1.2.0/api/application/commands/bookmark-command-factory/readme/)
* [application/commands/bookmark-command-history-suggestion](/1.2.0/api/application/commands/bookmark-command-history-suggestion/readme/)
* [application/commands/bookmark-command-parser](/1.2.0/api/application/commands/bookmark-command-parser/readme/)
* [application/commands/bookmark-command-suggestion](/1.2.0/api/application/commands/bookmark-command-suggestion/readme/)
* [application/commands/bookmark-command-types](/1.2.0/api/application/commands/bookmark-command-types/readme/)
* [application/commands/bookmark-directory-suggestion](/1.2.0/api/application/commands/bookmark-directory-suggestion/readme/)
* [application/commands/bookmark-go-path-suggestion](/1.2.0/api/application/commands/bookmark-go-path-suggestion/readme/)
* [application/commands/bookmark-help](/1.2.0/api/application/commands/bookmark-help/readme/)
* [application/commands/bookmark-list-command-parser](/1.2.0/api/application/commands/bookmark-list-command-parser/readme/)
* [application/commands/bookmark-mark-command-parser](/1.2.0/api/application/commands/bookmark-mark-command-parser/readme/)
* [application/commands/bookmark-organize-command-parser](/1.2.0/api/application/commands/bookmark-organize-command-parser/readme/)
* [application/commands/bookmark-search-command-parser](/1.2.0/api/application/commands/bookmark-search-command-parser/readme/)
* [application/commands/bookmark-search-command-types](/1.2.0/api/application/commands/bookmark-search-command-types/readme/)
* [application/commands/bookmark-tag-command-parser](/1.2.0/api/application/commands/bookmark-tag-command-parser/readme/)
* [application/commands/bookmark-tree-command-parser](/1.2.0/api/application/commands/bookmark-tree-command-parser/readme/)
* [application/commands/bookmark-usage-command-parser](/1.2.0/api/application/commands/bookmark-usage-command-parser/readme/)
* [application/commands/bookmark-usage-command-types](/1.2.0/api/application/commands/bookmark-usage-command-types/readme/)
* [application/storage/extension-state-ports](/1.2.0/api/application/storage/extension-state-ports/readme/)
* [application/storage/extension-state-use-cases](/1.2.0/api/application/storage/extension-state-use-cases/readme/)
* [domain/bookmarks/bookmark-directory](/1.2.0/api/domain/bookmarks/bookmark-directory/readme/)
* [domain/bookmarks/bookmark-tree](/1.2.0/api/domain/bookmarks/bookmark-tree/readme/)
* [domain/bookmarks/bookmark-tree-view](/1.2.0/api/domain/bookmarks/bookmark-tree-view/readme/)
* [domain/bookmarks/current-directory](/1.2.0/api/domain/bookmarks/current-directory/readme/)
* [domain/bookmarks/folder-path](/1.2.0/api/domain/bookmarks/folder-path/readme/)
* [domain/bookmarks/result-cursor](/1.2.0/api/domain/bookmarks/result-cursor/readme/)
* [domain/bookmarks/result-selection](/1.2.0/api/domain/bookmarks/result-selection/readme/)
* [domain/cli/bookmark-cli-entry](/1.2.0/api/domain/cli/bookmark-cli-entry/readme/)
* [domain/cli/command-alias](/1.2.0/api/domain/cli/command-alias/readme/)
* [domain/cli/command-line-editing](/1.2.0/api/domain/cli/command-line-editing/readme/)
* [domain/cli/completion-cursor](/1.2.0/api/domain/cli/completion-cursor/readme/)
* [domain/history/browser-history](/1.2.0/api/domain/history/browser-history/readme/)
* [domain/search/bookmark-search](/1.2.0/api/domain/search/bookmark-search/readme/)
* [domain/storage/bookmark-usage](/1.2.0/api/domain/storage/bookmark-usage/readme/)
* [domain/storage/command-history-navigation](/1.2.0/api/domain/storage/command-history-navigation/readme/)
* [domain/storage/extension-state](/1.2.0/api/domain/storage/extension-state/readme/)
* [domain/storage/extension-state-cleanup](/1.2.0/api/domain/storage/extension-state-cleanup/readme/)
* [domain/tags/virtual-tag](/1.2.0/api/domain/tags/virtual-tag/readme/)
* [entrypoints/background](/1.2.0/api/entrypoints/background/readme/)
* [entrypoints/cli-page/app](/1.2.0/api/entrypoints/cli-page/app/readme/)
* [entrypoints/cli-page/app-command-handlers](/1.2.0/api/entrypoints/cli-page/app-command-handlers/readme/)
* [entrypoints/cli-page/app-command-runtime](/1.2.0/api/entrypoints/cli-page/app-command-runtime/readme/)
* [entrypoints/cli-page/bookmark-cli-app-screen](/1.2.0/api/entrypoints/cli-page/bookmark-cli-app-screen/readme/)
* [entrypoints/cli-page/command-history-keyboard-actions](/1.2.0/api/entrypoints/cli-page/command-history-keyboard-actions/readme/)
* [entrypoints/cli-page/command-line-editing-keyboard](/1.2.0/api/entrypoints/cli-page/command-line-editing-keyboard/readme/)
* [entrypoints/cli-page/completion-keyboard](/1.2.0/api/entrypoints/cli-page/completion-keyboard/readme/)
* [entrypoints/cli-page/current-command-executor](/1.2.0/api/entrypoints/cli-page/current-command-executor/readme/)
* [entrypoints/cli-page/current-command-submit-handler](/1.2.0/api/entrypoints/cli-page/current-command-submit-handler/readme/)
* [entrypoints/cli-page/current-input-change-handler](/1.2.0/api/entrypoints/cli-page/current-input-change-handler/readme/)
* [entrypoints/cli-page/main](/1.2.0/api/entrypoints/cli-page/main/readme/)
* [entrypoints/cli-page/use-bookmark-cli-app-keyboard](/1.2.0/api/entrypoints/cli-page/use-bookmark-cli-app-keyboard/readme/)
* [entrypoints/cli-page/use-bookmark-cli-cursor-state](/1.2.0/api/entrypoints/cli-page/use-bookmark-cli-cursor-state/readme/)
* [entrypoints/cli-page/use-bookmark-cli-keyboard](/1.2.0/api/entrypoints/cli-page/use-bookmark-cli-keyboard/readme/)
* [entrypoints/cli-page/use-bookmark-cli-suggestions](/1.2.0/api/entrypoints/cli-page/use-bookmark-cli-suggestions/readme/)
* [entrypoints/cli-page/use-bookmark-cli-transcript](/1.2.0/api/entrypoints/cli-page/use-bookmark-cli-transcript/readme/)
* [entrypoints/cli-page/use-command-history-keyboard](/1.2.0/api/entrypoints/cli-page/use-command-history-keyboard/readme/)
* [entrypoints/cli-page/use-result-cursor-state](/1.2.0/api/entrypoints/cli-page/use-result-cursor-state/readme/)
* [entrypoints/popup/app](/1.2.0/api/entrypoints/popup/app/readme/)
* [entrypoints/popup/main](/1.2.0/api/entrypoints/popup/main/readme/)
* [entrypoints/popup/popup-messages](/1.2.0/api/entrypoints/popup/popup-messages/readme/)
* [infrastructure/chrome/bookmarks-adapter](/1.2.0/api/infrastructure/chrome/bookmarks-adapter/readme/)
* [infrastructure/chrome/cli-page-window-adapter](/1.2.0/api/infrastructure/chrome/cli-page-window-adapter/readme/)
* [infrastructure/chrome/commands-adapter](/1.2.0/api/infrastructure/chrome/commands-adapter/readme/)
* [infrastructure/chrome/current-window-adapter](/1.2.0/api/infrastructure/chrome/current-window-adapter/readme/)
* [infrastructure/chrome/extension-state-storage-adapter](/1.2.0/api/infrastructure/chrome/extension-state-storage-adapter/readme/)
* [infrastructure/chrome/history-adapter](/1.2.0/api/infrastructure/chrome/history-adapter/readme/)
* [infrastructure/chrome/launch-context-storage-adapter](/1.2.0/api/infrastructure/chrome/launch-context-storage-adapter/readme/)
* [infrastructure/chrome/shortcut-settings-page-adapter](/1.2.0/api/infrastructure/chrome/shortcut-settings-page-adapter/readme/)
* [infrastructure/chrome/toolbar-action-adapter](/1.2.0/api/infrastructure/chrome/toolbar-action-adapter/readme/)
* [presentation/cli/bookmark-cli-alias-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-alias-command-executors/readme/)
* [presentation/cli/bookmark-cli-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-command-executors/readme/)
* [presentation/cli/bookmark-cli-command-state](/1.2.0/api/presentation/cli/bookmark-cli-command-state/readme/)
* [presentation/cli/bookmark-cli-completion-input](/1.2.0/api/presentation/cli/bookmark-cli-completion-input/readme/)
* [presentation/cli/bookmark-cli-controller](/1.2.0/api/presentation/cli/bookmark-cli-controller/readme/)
* [presentation/cli/bookmark-cli-directory-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-directory-command-executors/readme/)
* [presentation/cli/bookmark-cli-favicon-url](/1.2.0/api/presentation/cli/bookmark-cli-favicon-url/readme/)
* [presentation/cli/bookmark-cli-grep-filter](/1.2.0/api/presentation/cli/bookmark-cli-grep-filter/readme/)
* [presentation/cli/bookmark-cli-help-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-help-command-executors/readme/)
* [presentation/cli/bookmark-cli-history-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-history-command-executors/readme/)
* [presentation/cli/bookmark-cli-keyboard](/1.2.0/api/presentation/cli/bookmark-cli-keyboard/readme/)
* [presentation/cli/bookmark-cli-mark-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-mark-command-executors/readme/)
* [presentation/cli/bookmark-cli-organize-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-organize-command-executors/readme/)
* [presentation/cli/bookmark-cli-organize-command-router](/1.2.0/api/presentation/cli/bookmark-cli-organize-command-router/readme/)
* [presentation/cli/bookmark-cli-pipe-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-pipe-command-executors/readme/)
* [presentation/cli/bookmark-cli-result-default-command](/1.2.0/api/presentation/cli/bookmark-cli-result-default-command/readme/)
* [presentation/cli/bookmark-cli-result-details](/1.2.0/api/presentation/cli/bookmark-cli-result-details/readme/)
* [presentation/cli/bookmark-cli-result-scroll](/1.2.0/api/presentation/cli/bookmark-cli-result-scroll/readme/)
* [presentation/cli/bookmark-cli-scroll](/1.2.0/api/presentation/cli/bookmark-cli-scroll/readme/)
* [presentation/cli/bookmark-cli-search-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-search-command-executors/readme/)
* [presentation/cli/bookmark-cli-state-builders](/1.2.0/api/presentation/cli/bookmark-cli-state-builders/readme/)
* [presentation/cli/bookmark-cli-suggestion-overlay-position](/1.2.0/api/presentation/cli/bookmark-cli-suggestion-overlay-position/readme/)
* [presentation/cli/bookmark-cli-suggestion-scroll](/1.2.0/api/presentation/cli/bookmark-cli-suggestion-scroll/readme/)
* [presentation/cli/bookmark-cli-tag-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-tag-command-executors/readme/)
* [presentation/cli/bookmark-cli-transcript](/1.2.0/api/presentation/cli/bookmark-cli-transcript/readme/)
* [presentation/cli/bookmark-cli-usage-command-executors](/1.2.0/api/presentation/cli/bookmark-cli-usage-command-executors/readme/)
* [presentation/cli/bookmark-cli-usage-command-router](/1.2.0/api/presentation/cli/bookmark-cli-usage-command-router/readme/)
* [presentation/cli/bookmark-cli-view-model](/1.2.0/api/presentation/cli/bookmark-cli-view-model/readme/)
* [presentation/cli/components/bookmark-cli-command-form](/1.2.0/api/presentation/cli/components/bookmark-cli-command-form/readme/)
* [presentation/cli/components/bookmark-cli-prompt](/1.2.0/api/presentation/cli/components/bookmark-cli-prompt/readme/)
* [presentation/cli/components/bookmark-cli-result-content](/1.2.0/api/presentation/cli/components/bookmark-cli-result-content/readme/)
* [presentation/cli/components/bookmark-cli-result-favicon](/1.2.0/api/presentation/cli/components/bookmark-cli-result-favicon/readme/)
* [presentation/cli/components/bookmark-cli-result-list](/1.2.0/api/presentation/cli/components/bookmark-cli-result-list/readme/)
* [presentation/cli/components/bookmark-cli-result-list-types](/1.2.0/api/presentation/cli/components/bookmark-cli-result-list-types/readme/)
* [presentation/cli/components/bookmark-cli-result-segments](/1.2.0/api/presentation/cli/components/bookmark-cli-result-segments/readme/)
* [presentation/cli/components/bookmark-cli-screen](/1.2.0/api/presentation/cli/components/bookmark-cli-screen/readme/)
* [presentation/cli/components/bookmark-cli-screen-story-test](/1.2.0/api/presentation/cli/components/bookmark-cli-screen-story-test/readme/)
* [presentation/cli/components/bookmark-cli-suggestion-list](/1.2.0/api/presentation/cli/components/bookmark-cli-suggestion-list/readme/)
* [presentation/cli/components/bookmark-cli-suggestion-overlay-style](/1.2.0/api/presentation/cli/components/bookmark-cli-suggestion-overlay-style/readme/)
* [presentation/cli/components/bookmark-cli-terminal-body](/1.2.0/api/presentation/cli/components/bookmark-cli-terminal-body/readme/)
* [presentation/cli/components/bookmark-cli-terminal-body-hooks](/1.2.0/api/presentation/cli/components/bookmark-cli-terminal-body-hooks/readme/)
* [presentation/cli/components/bookmark-cli-transcript-list](/1.2.0/api/presentation/cli/components/bookmark-cli-transcript-list/readme/)
* [presentation/settings/components/settings-popup](/1.2.0/api/presentation/settings/components/settings-popup/readme/)
